# VideoDecoder

./: .gitignore  .project  AGENTS.md  README.md  README.zh-CN.md  fix_padding.py  learn.md  settings.gradle  update_xml.py  最终解决方案.md  问题.md  音画同步解决方案.md
.claude/: settings.local.json
.claude/skills/custom_skill/: SKILL.md
.github/workflows/: android-unit-tests.yml
app/: .project  build.gradle
app/src/androidTest/java/com/example/videodecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioRender.cpp  AudioRender.h  CMakeLists.txt  Decoder.cpp  Decoder.h  Demuxer.cpp  Demuxer.h  JniStringChars.h  MediaInput.cpp  MediaInput.h  NativeEgl.cpp  NativeEgl.h  NativeWindowHolder.cpp  NativeWindowHolder.h  PlaybackState.h  ScopeExit.h  native-lib.cpp  queue.cpp  queue.h  videoRender.cpp  videoRender.h
app/src/main/java/com/example/videodecoder/: DampedDragAnimation.kt  DragGestureInspector.kt  InteractiveHighlight.kt  LiquidControls.kt  LiquidGlassHelper.kt  LiquidSlider.kt  MainActivity.java  PlaybackInputPolicy.java  PlaybackTimeFormatter.java  PlaybackUiPolicy.java  (+2 more)
app/src/main/res/drawable/: bg_deadliner_chip.xml  bg_deadliner_surface.xml  bg_liquid_player_surface.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
config/: mcporter.json
docs/run-logs/: agent-workflow-formal-screenshot.txt  agent-workflow-terminal-log.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
